--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
       "@rollup/plugin-replace": "^2.4.2",
       "@types/node": "^15.12.2",
       "@types/ws": "^7.4.5",
-      "discord.js": "^12.5.3",
       "dotenv": "^10.0.0",
       "rollup": "^2.52.1",
       "rollup-plugin-license": "^2.5.0",
@@ -30,5 +29,8 @@
       "rollup-plugin-typescript2": "^0.30.0",
       "source-map-support": "^0.5.19",
       "typescript": "^4.3.4"
+   },
+   "dependencies": {
+      "discord.js": "^12.5.3"
    }
 }
